[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/skill_icon.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/ui_panel.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/textures/bar_fill.png" type="Texture2D" id=4]
[ext_resource path="res://ui/textures/bar_bg.png" type="Texture2D" id=5]
[ext_resource path="res://ui/textures/bar_fg.png" type="Texture2D" id=6]
[ext_resource path="res://ui/textures/bar_fg2.png" type="Texture2D" id=7]
[ext_resource path="res://ui/textures/bar_fill2.png" type="Texture2D" id=8]
[ext_resource path="res://world/background.gdshader" type="Shader" id=9]
[ext_resource path="res://world/world.gd" type="Script" id=10]
[ext_resource path="res://ui/ui_objective_list.tscn" type="PackedScene" id=11]
[ext_resource path="res://world/tileset_grass.tres" type="TileSet" id=12]
[ext_resource path="res://world/snow-expansion.png" type="Texture2D" id=13]
[ext_resource path="res://enemies/enemy_gunner.tscn" type="PackedScene" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 9 )

[sub_resource type="TileSet" id=2]
0/name = "snow-expansion.png 0"
0/texture = ExtResource( 13 )
0/tex_offset = Vector2( 0, 0 )
0/material = SubResource( 1 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 257, 128, 80, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 16, Vector2( 1, 0 ), 48, Vector2( 2, 0 ), 56, Vector2( 3, 0 ), 56, Vector2( 4, 0 ), 24 ]
0/autotile/icon_coordinate = Vector2( 3, 0 )
0/autotile/tile_size = Vector2( 16, 48 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [ Vector3( 3, 0, 2 ) ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "Roads"
0/texture = ExtResource( 13 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 128, 128, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 511, Vector2( 0, 1 ), 446, Vector2( 0, 2 ), 219, Vector2( 0, 3 ), 59, Vector2( 0, 4 ), 146, Vector2( 0, 5 ), 176, Vector2( 1, 0 ), 255, Vector2( 1, 1 ), 443, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 58, Vector2( 1, 4 ), 56, Vector2( 1, 5 ), 152, Vector2( 2, 0 ), 447, Vector2( 2, 1 ), 506, Vector2( 2, 2 ), 438, Vector2( 2, 3 ), 182, Vector2( 2, 4 ), 27, Vector2( 2, 5 ), 24, Vector2( 3, 0 ), 507, Vector2( 3, 1 ), 187, Vector2( 3, 2 ), 504, Vector2( 3, 3 ), 434, Vector2( 3, 4 ), 54, Vector2( 3, 5 ), 18, Vector2( 4, 0 ), 510, Vector2( 4, 1 ), 190, Vector2( 4, 2 ), 155, Vector2( 4, 3 ), 178, Vector2( 4, 4 ), 432, Vector2( 4, 5 ), 48, Vector2( 5, 0 ), 191, Vector2( 5, 1 ), 442, Vector2( 5, 2 ), 218, Vector2( 5, 3 ), 440, Vector2( 5, 4 ), 216, Vector2( 5, 5 ), 144, Vector2( 6, 0 ), 254, Vector2( 6, 1 ), 250, Vector2( 6, 2 ), 154, Vector2( 6, 3 ), 248, Vector2( 6, 4 ), 26, Vector2( 6, 5 ), 16, Vector2( 7, 0 ), 251, Vector2( 7, 1 ), 186, Vector2( 7, 2 ), 62, Vector2( 7, 3 ), 184, Vector2( 7, 4 ), 50, Vector2( 7, 5 ), 464 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "snow-expansion.png 0"
0/texture = ExtResource( 13 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 256, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "snow-expansion.png 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "snow-expansion.png 2"
2/texture = ExtResource( 13 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 320, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "snow-expansion.png 3"
3/texture = ExtResource( 13 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 336, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 10 )

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Grass" type="TileMap" parent="."]
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Roads" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Enviroment" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="ShipStatus" type="PanelContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_right = 222.0
theme_override_styles/panel = ExtResource( 3 )

[node name="Bars" type="VBoxContainer" parent="UI/ShipStatus"]
offset_left = 18.0
offset_top = 18.0
offset_right = 204.0
offset_bottom = 54.0

[node name="Armor" type="HBoxContainer" parent="UI/ShipStatus/Bars"]
offset_right = 186.0
offset_bottom = 16.0

[node name="Label" type="Label" parent="UI/ShipStatus/Bars/Armor"]
offset_top = 1.0
offset_right = 42.0
offset_bottom = 15.0
text = "HULL: "

[node name="ArmorBar" type="TextureProgressBar" parent="UI/ShipStatus/Bars/Armor"]
offset_left = 46.0
offset_right = 174.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="Shield" type="HBoxContainer" parent="UI/ShipStatus/Bars"]
offset_top = 20.0
offset_right = 186.0
offset_bottom = 36.0

[node name="Label" type="Label" parent="UI/ShipStatus/Bars/Shield"]
offset_top = 1.0
offset_right = 54.0
offset_bottom = 15.0
text = "SHIELD: "

[node name="ShieldBar" type="TextureProgressBar" parent="UI/ShipStatus/Bars/Shield"]
offset_left = 58.0
offset_right = 186.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="Weapons" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -72.0
theme_override_styles/panel = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Weapons"]
offset_left = 18.0
offset_top = 18.0
offset_right = 207.0
offset_bottom = 54.0

[node name="Heat" type="HBoxContainer" parent="UI/Weapons/VBoxContainer"]
offset_right = 189.0
offset_bottom = 16.0

[node name="Label" type="Label" parent="UI/Weapons/VBoxContainer/Heat"]
offset_top = 1.0
offset_right = 41.0
offset_bottom = 15.0
text = "HEAT: "

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/Weapons/VBoxContainer/Heat"]
offset_left = 45.0
offset_right = 173.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="Energy" type="HBoxContainer" parent="UI/Weapons/VBoxContainer"]
offset_top = 20.0
offset_right = 189.0
offset_bottom = 36.0

[node name="Label" type="Label" parent="UI/Weapons/VBoxContainer/Energy"]
offset_top = 1.0
offset_right = 57.0
offset_bottom = 15.0
text = "ENERGY: "

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/Weapons/VBoxContainer/Energy"]
offset_left = 61.0
offset_right = 189.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 128, 16 )
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="Map" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.0
offset_bottom = 36.0
theme_override_styles/panel = ExtResource( 3 )

[node name="Skills" type="PanelContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -108.0
offset_right = 244.0
theme_override_styles/panel = ExtResource( 3 )

[node name="SkillList" type="HBoxContainer" parent="UI/Skills"]
offset_left = 18.0
offset_top = 18.0
offset_right = 470.0
offset_bottom = 90.0

[node name="Weapon1" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]

[node name="Weapon2" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
offset_left = 76.0
offset_right = 148.0

[node name="Device1" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
offset_left = 152.0
offset_right = 224.0

[node name="Device2" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
offset_left = 228.0
offset_right = 300.0

[node name="Device3" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
offset_left = 304.0
offset_right = 376.0

[node name="Device4" parent="UI/Skills/SkillList" instance=ExtResource( 2 )]
offset_left = 380.0
offset_right = 452.0

[node name="UIObjectiveList" parent="UI" instance=ExtResource( 11 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 640, 360 )

[node name="PlayerCam" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = 0
limit_right = 3840
limit_bottom = 2160

[node name="WorldLimit" type="Marker2D" parent="."]
position = Vector2( 3840, 2160 )
__meta__ = {
"_gizmo_extents_": 32.0
}

[node name="EnemyGunner" parent="." instance=ExtResource( 14 )]
position = Vector2( 265, 224 )
